# aoc2021

./: .gitignore  init.py  pyproject.toml
day01/: run.py
day02/: run.py
day03/: run.py
day04/: run.py
day05/: run.py
day07/: run.py
day08/: run.py
day09/: run.py
day10/: run.py
day11/: run.py
day12/: run.py
day13/: run.py
day15/: run.py
day16/: run.py
day18/: run.py
day20/: run.py
day24/: run.py
day25/: run.py
