[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.8"
requests = "^2.25.0"
# numpy = "^1.19.4"
# regex = "^2020.11.13"
# pyskiplist = "^1.0.0"
# rich = "^9.5.1"
# numba = "^0.52.0"
black = "^21.11b1"
beautifulsoup4 = "^4.10.0"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
